# LoggerTool

./: CMakeLists.txt  LoggingTool.cpp  LoggingTool.h  main.cpp
